[ubsan] ad_x86.hpp:6417:11: runtime error: shift exponent 100 is too large for 32-bit type 'unsigned int'

XMLWordPrintable

    • b18
    • x86_64
    • linux

      When running ubsan enabled binaries on Linux x86_64, the following issue is reported when running jtreg test

      compiler/intrinsics/unsafe/HeapByteBufferTest.java#id1 :

      ad_x86.hpp:6417:11: runtime error: shift exponent 100 is too large for 32-bit type 'unsigned int'
          #0 0x7f14991c1826 in Pipeline_Use_Cycle_Mask::operator<<=(int) make/hotspot/ad_x86.hpp:6417
          #1 0x7f14991c1826 in Pipeline_Use_Element::step(unsigned int) make/hotspot/ad_x86.hpp:6471
          #2 0x7f14991c1826 in Pipeline_Use::step(unsigned int) make/hotspot/ad_x86.hpp:6519
          #3 0x7f14991c1826 in Scheduling::step(unsigned int) src/hotspot/share/opto/output.cpp:2122
          #4 0x7f14991c1826 in Scheduling::AddNodeToBundle(Node*, Block const*) src/hotspot/share/opto/output.cpp:2559
          #5 0x7f149bcd44f6 in Scheduling::DoScheduling() src/hotspot/share/opto/output.cpp:2822
          #6 0x7f149bceddf2 in PhaseOutput::ScheduleAndBundle() src/hotspot/share/opto/output.cpp:2173
          #7 0x7f149bceddf2 in PhaseOutput::Output() src/hotspot/share/opto/output.cpp:347
          #8 0x7f149a30bfe0 in Compile::Code_Gen() src/hotspot/share/opto/compile.cpp:3013
          #9 0x7f149a3185f3 in Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*) src/hotspot/share/opto/compile.cpp:885
          #10 0x7f1499f51948 in C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*) src/hotspot/share/opto/c2compiler.cpp:142
          #11 0x7f149a32e7f4 in CompileBroker::invoke_compiler_on_method(CompileTask*) src/hotspot/share/compiler/compileBroker.cpp:2303
          #12 0x7f149a330e86 in CompileBroker::compiler_thread_loop() src/hotspot/share/compiler/compileBroker.cpp:1961
          #13 0x7f149ade503a in JavaThread::thread_main_inner() src/hotspot/share/runtime/javaThread.cpp:757
          #14 0x7f149c61f9ca in Thread::call_run() src/hotspot/share/runtime/thread.cpp:225
          #15 0x7f149bc923e1 in thread_native_entry src/hotspot/os/linux/os_linux.cpp:858
          #16 0x7f14a0dfc6e9 in start_thread (/lib64/libpthread.so.0+0xa6e9) (BuildId: 9a146bd267419cb6a8cf08d7c602953a0f2e12c5)
          #17 0x7f14a070558e in clone (/lib64/libc.so.6+0x11858e) (BuildId: f2d1cb1ef49f8c47d43a4053910ba6137673ccce)

            Assignee:
            Boris Ulasevich
            Reporter:
            Matthias Baesken
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: